--- a/distancia-service/distancia-service.properties
+++ b/distancia-service/distancia-service.properties
@@ -2,7 +2,7 @@
 spring.sleuth.sampler.probability=0.1
 
 #DATASOURCE CONFIGS
-spring.datasource.url=jdbc:h2:mem:pagamento
+spring.datasource.url=jdbc:h2:mem:distancia
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
